cppseminar/apchelm/templates/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: apc
spec:
  selector:
    app: gateway
    category: backend
  ports:
  - port: 80
    targetPort: 5000
