cppseminar/apchelm/templates/mqread-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqread-service
  namespace: apc
spec:
  selector:
    app: mqreadservice
  ports:
  - port: 80
    targetPort: 80
