cppseminar/apchelm/templates/mqreadservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqreadservice
  namespace: apc
spec:
  selector:
    app: mqreadservice
  ports:
  - port: 80
    targetPort: 80
