cppseminar/apchelm/templates/presentation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: presentation-service
  namespace: apc
spec:
  selector:
    app: presentation
  ports:
  - port: 80
    targetPort: 80
