cppseminar/apchelm/templates/submission-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: submissionsservice-service
  namespace: apc
spec:
  selector:
    app: submissionsservice
  ports:
  - port: 80
    targetPort: 80
