cppseminar/apchelm/templates/testservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testservice-service
  namespace: apc
spec:
  selector:
    app: testservice
  ports:
  - port: 80
    targetPort: 80
