cppseminar/apchelm/templates/userservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice-service
  namespace: apc
spec:
  selector:
    app: userservice
  ports:
  - port: 80
    targetPort: 80
